2006-07-09 17:59 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormViewEditor.m: Correction for issue which was causing
	size inspector not to update when a view was moved or changed.
	Removed code in editoedObjectFrameDidChange: and frameDidChange:
	to correct the problem.

2006-07-09 13:04 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperLoader.m: Correct test for customClass or
	name in loadFileWrapper:withDocument:.

2006-07-09 11:18 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormCustomView.m: initWithCoder: move call to get customView
	className after the if, so that it's properly set.
	* GormCore/GormNibWrapperLoader.m: Remove commented out code.

2006-07-09 10:46 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/GormDocument.gorm: New version profile added
	to pull down.
	* GormCore/GormDocument.m: Encode topLevelObjects first in
	encodeWithCoder: and decode first in initWithCoder:.
	* GormCore/GormGormWrapperBuilder.m: Changes for version 2 of
	GSNibContainer.
	* GormCore/GormGormWrapperLoader.m: Changes for version 2 of
	GSNibContainer.
	* GormCore/GormNibWrapperLoader.m: No longer explicitly get
	the main menu.  The main menu is the only menu that is a top
	level object, so let it determine itself.
	* GormCore/GormWrapperBuilder.m: Changes to prevent sending
	back a file wrapper if the dictionary returned is nil in
	buildWrapperWithDocument:.
	* Resources/VersionProfiles.plist: New version profile.

2006-07-05 20:17 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: In testInterface, assign top level objects from the
	testContainer to topObjects, a temporary var, so that they can be
	properly cleaned up.

2006-07-05 19:56 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Correct bug introduced at some point in testInterface which
	causes the test mode not to display a menu when the application has no